--- a/frontend/client/src/assets/main.css
+++ b/frontend/client/src/assets/main.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Sen:wght@400..800&family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&family=Sen:wght@400..800&family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+.varela-round-regular {
+    font-family: "Varela Round", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
